tests/macros/select/extension.stderr
error: option `extension` does not exist for kind `select`
 --> $DIR/extension.rs:2:44
  |
2 |     let q = requestty::questions![Select { extension: todo!() }];
  |                                            ^^^^^^^^^
