tests/macros/select/extension.rs
fn main() {
    let q = requestty::questions![Select { extension: todo!() }];
}
